# gengine

./: .travis.yml  CMakeLists.txt  Makefile  Readme.md  main.cpp  uttt.cpp  uttt.h
game/: Makefile  game.h
manager/: Makefile  manager.h
mcts/: Makefile  mcts.h
moca/: Makefile  game.cpp  game.h  mcts.cpp  mcts.h  mcts2.cpp
src/: CMakeLists.txt  main.cpp  uttt.cpp
src/explorer/: explorer.h  explorer.hpp
src/game/: CMakeLists.txt  game.cpp  game.h  game.hpp
src/generic_bots/: CMakeLists.txt  abeta.hpp  generic_bots.h  generic_bots.hpp  mcts.cpp  mcts.hpp  minimax.hpp  random.cpp  random.hpp
src/manager/: CMakeLists.txt  manager.cpp  manager.h  manager.hpp
src/mcts/: CMakeLists.txt  mcts.cpp  mcts.h  mcts.hpp  mcts2.cpp  mcts2.hpp  mcts_cache.hpp  mcts_parallel.hpp
src/minimax/: abeta.hpp  eval.hpp  minimax.h  minimax.hpp
src/ttt/: CMakeLists.txt  ttt.cpp  ttt.h
src/uttt/: CMakeLists.txt  board.cpp  bot.cpp  eval.cpp  explorer.cpp  uttt.cpp  uttt.h  utttp.h
